conceptual/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On CONCEPT shift to state 1
-- On program shift to state 10
-- On list(concept) shift to state 11
-- On concept shift to state 13
-- On c_sig shift to state 15
## Reductions:
-- On EOF
--   reduce production list(concept) ->

State 1:
## Known stack suffix:
## CONCEPT
## LR(1) items:
c_sig -> CONCEPT . IDENT [ PURPOSE ]
c_sig -> CONCEPT . IDENT LBRACKET parameters RBRACKET [ PURPOSE ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## CONCEPT IDENT
## LR(1) items:
c_sig -> CONCEPT IDENT . [ PURPOSE ]
c_sig -> CONCEPT IDENT . LBRACKET parameters RBRACKET [ PURPOSE ]
## Transitions:
-- On LBRACKET shift to state 3
## Reductions:
-- On PURPOSE
--   reduce production c_sig -> CONCEPT IDENT

State 3:
## Known stack suffix:
## CONCEPT IDENT LBRACKET
## LR(1) items:
c_sig -> CONCEPT IDENT LBRACKET . parameters RBRACKET [ PURPOSE ]
## Transitions:
-- On IDENT shift to state 4
-- On parameters shift to state 5
-- On parameter shift to state 7
## Reductions:

State 4:
## Known stack suffix:
## IDENT
## LR(1) items:
parameter -> IDENT . [ RBRACKET COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET COMMA
--   reduce production parameter -> IDENT

State 5:
## Known stack suffix:
## CONCEPT IDENT LBRACKET parameters
## LR(1) items:
c_sig -> CONCEPT IDENT LBRACKET parameters . RBRACKET [ PURPOSE ]
## Transitions:
-- On RBRACKET shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## CONCEPT IDENT LBRACKET parameters RBRACKET
## LR(1) items:
c_sig -> CONCEPT IDENT LBRACKET parameters RBRACKET . [ PURPOSE ]
## Transitions:
## Reductions:
-- On PURPOSE
--   reduce production c_sig -> CONCEPT IDENT LBRACKET parameters RBRACKET

State 7:
## Known stack suffix:
## parameter
## LR(1) items:
parameters -> parameter . [ RBRACKET ]
parameters -> parameter . COMMA parameters [ RBRACKET ]
## Transitions:
-- On COMMA shift to state 8
## Reductions:
-- On RBRACKET
--   reduce production parameters -> parameter

State 8:
## Known stack suffix:
## parameter COMMA
## LR(1) items:
parameters -> parameter COMMA . parameters [ RBRACKET ]
## Transitions:
-- On IDENT shift to state 4
-- On parameters shift to state 9
-- On parameter shift to state 7
## Reductions:

State 9:
## Known stack suffix:
## parameter COMMA parameters
## LR(1) items:
parameters -> parameter COMMA parameters . [ RBRACKET ]
## Transitions:
## Reductions:
-- On RBRACKET
--   reduce production parameters -> parameter COMMA parameters

State 10:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 11:
## Known stack suffix:
## list(concept)
## LR(1) items:
program -> list(concept) . EOF [ # ]
## Transitions:
-- On EOF shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## list(concept) EOF
## LR(1) items:
program -> list(concept) EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> list(concept) EOF

State 13:
## Known stack suffix:
## concept
## LR(1) items:
list(concept) -> concept . list(concept) [ EOF ]
## Transitions:
-- On CONCEPT shift to state 1
-- On list(concept) shift to state 14
-- On concept shift to state 13
-- On c_sig shift to state 15
## Reductions:
-- On EOF
--   reduce production list(concept) ->

State 14:
## Known stack suffix:
## concept list(concept)
## LR(1) items:
list(concept) -> concept list(concept) . [ EOF ]
## Transitions:
## Reductions:
-- On EOF
--   reduce production list(concept) -> concept list(concept)

State 15:
## Known stack suffix:
## c_sig
## LR(1) items:
concept -> c_sig . c_purpose c_state c_actions [ EOF CONCEPT ]
## Transitions:
-- On PURPOSE shift to state 16
-- On c_purpose shift to state 17
## Reductions:

State 16:
## Known stack suffix:
## PURPOSE
## LR(1) items:
c_purpose -> PURPOSE . [ STATE ]
## Transitions:
## Reductions:
-- On STATE
--   reduce production c_purpose -> PURPOSE

State 17:
## Known stack suffix:
## c_sig c_purpose
## LR(1) items:
concept -> c_sig c_purpose . c_state c_actions [ EOF CONCEPT ]
## Transitions:
-- On STATE shift to state 18
-- On c_state shift to state 80
## Reductions:

State 18:
## Known stack suffix:
## STATE
## LR(1) items:
c_state -> STATE . list(state) ACTIONS [ ACTIONS ]
## Transitions:
-- On IDENT shift to state 19
-- On state shift to state 22
-- On named_parameters shift to state 23
-- On list(state) shift to state 78
-- On ident_list shift to state 67
## Reductions:
-- On ACTIONS
--   reduce production list(state) ->

State 19:
## Known stack suffix:
## IDENT
## LR(1) items:
ident_list -> IDENT . [ COLON ]
ident_list -> IDENT . COMMA ident_list [ COLON ]
## Transitions:
-- On COMMA shift to state 20
## Reductions:
-- On COLON
--   reduce production ident_list -> IDENT

State 20:
## Known stack suffix:
## IDENT COMMA
## LR(1) items:
ident_list -> IDENT COMMA . ident_list [ COLON ]
## Transitions:
-- On IDENT shift to state 19
-- On ident_list shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## IDENT COMMA ident_list
## LR(1) items:
ident_list -> IDENT COMMA ident_list . [ COLON ]
## Transitions:
## Reductions:
-- On COLON
--   reduce production ident_list -> IDENT COMMA ident_list

State 22:
## Known stack suffix:
## state
## LR(1) items:
list(state) -> state . list(state) [ ACTIONS ]
## Transitions:
-- On IDENT shift to state 19
-- On state shift to state 22
-- On named_parameters shift to state 23
-- On list(state) shift to state 66
-- On ident_list shift to state 67
## Reductions:
-- On ACTIONS
--   reduce production list(state) ->

State 23:
## Known stack suffix:
## named_parameters
## LR(1) items:
state -> named_parameters . [ IDENT ACTIONS ]
state -> named_parameters . ASSIGN expr [ IDENT ACTIONS ]
## Transitions:
-- On ASSIGN shift to state 24
## Reductions:
-- On IDENT ACTIONS
--   reduce production state -> named_parameters

State 24:
## Known stack suffix:
## named_parameters ASSIGN
## LR(1) items:
state -> named_parameters ASSIGN . expr [ IDENT ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 65
## Reductions:

State 25:
## Known stack suffix:
## STR_LIT
## LR(1) items:
expr -> STR_LIT . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
## Reductions:
-- On PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS
--   reduce production expr -> STR_LIT

State 26:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 64
## Reductions:

State 27:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 63
## Reductions:

State 28:
## Known stack suffix:
## INT_LIT
## LR(1) items:
expr -> INT_LIT . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
## Reductions:
-- On PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS
--   reduce production expr -> INT_LIT

State 29:
## Known stack suffix:
## IDENT
## LR(1) items:
lval -> IDENT . [ PLUS OP NOT NEQ MINUSEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT ASSIGN AMPEQ AMP ADDEQ ACTION_START ACTIONS ]
## Transitions:
## Reductions:
-- On PLUS OP NOT NEQ MINUSEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT ASSIGN AMPEQ AMP ADDEQ ACTION_START ACTIONS
--   reduce production lval -> IDENT

State 30:
## Known stack suffix:
## BOOL_LIT
## LR(1) items:
expr -> BOOL_LIT . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
## Reductions:
-- On PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS
--   reduce production expr -> BOOL_LIT

State 31:
## Known stack suffix:
## lval
## LR(1) items:
expr -> lval . ASSIGN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> lval . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
lval -> lval . DOT lval [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT ASSIGN AMP ACTION_START ACTIONS ]
## Transitions:
-- On ASSIGN shift to state 32
## Reductions:
-- On PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS
--   reduce production expr -> lval

State 32:
## Known stack suffix:
## lval ASSIGN
## LR(1) items:
expr -> lval ASSIGN . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## lval ASSIGN expr
## LR(1) items:
expr -> expr . PLUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . MINUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . AMP expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LAND expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LOR expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . EQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NEQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NOT IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . DOT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> lval ASSIGN expr . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On PLUS shift to state 34
-- On NOT shift to state 40
-- On NEQ shift to state 45
-- On MINUS shift to state 43
-- On LTE shift to state 47
-- On LT shift to state 49
-- On LOR shift to state 51
-- On LAND shift to state 53
-- On IN shift to state 55
-- On GTE shift to state 57
-- On GT shift to state 59
-- On EQ shift to state 61
-- On DOT shift to state 36
-- On AMP shift to state 38
## Reductions:
-- On OP IDENT EOF CONCEPT ACTION_START ACTIONS
--   reduce production expr -> lval ASSIGN expr

State 34:
## Known stack suffix:
## expr PLUS
## LR(1) items:
expr -> expr PLUS . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## expr PLUS expr
## LR(1) items:
expr -> expr . PLUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr PLUS expr . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . MINUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . AMP expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LAND expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LOR expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . EQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NEQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NOT IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . DOT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On DOT shift to state 36
-- On AMP shift to state 38
## Reductions:
-- On PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF CONCEPT ACTION_START ACTIONS
--   reduce production expr -> expr PLUS expr

State 36:
## Known stack suffix:
## expr DOT
## LR(1) items:
expr -> expr DOT . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## expr DOT expr
## LR(1) items:
expr -> expr . PLUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . MINUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . AMP expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LAND expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LOR expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . EQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NEQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NOT IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . DOT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr DOT expr . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
## Reductions:
-- On PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS
--   reduce production expr -> expr DOT expr

State 38:
## Known stack suffix:
## expr AMP
## LR(1) items:
expr -> expr AMP . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## expr AMP expr
## LR(1) items:
expr -> expr . PLUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . MINUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . AMP expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr AMP expr . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LAND expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LOR expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . EQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NEQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NOT IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . DOT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On DOT shift to state 36
## Reductions:
-- On PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF CONCEPT AMP ACTION_START ACTIONS
--   reduce production expr -> expr AMP expr

State 40:
## Known stack suffix:
## expr NOT
## LR(1) items:
expr -> expr NOT . IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On IN shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## expr NOT IN
## LR(1) items:
expr -> expr NOT IN . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## expr NOT IN expr
## LR(1) items:
expr -> expr . PLUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . MINUS expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . AMP expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LAND expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LOR expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . EQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NEQ expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . LTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . GTE expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . NOT IN expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr NOT IN expr . [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
expr -> expr . DOT expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On PLUS shift to state 34
-- On MINUS shift to state 43
-- On DOT shift to state 36
-- On AMP shift to state 38
## Reductions:
-- On OP NOT NEQ LTE LT LOR LAND IN IDENT GTE GT EQ EOF CONCEPT ACTION_START ACTIONS
--   reduce production expr -> expr NOT IN expr

State 43:
## Known stack suffix:
## expr MINUS
## LR(1) items:
expr -> expr MINUS . expr [ PLUS OP NOT NEQ MINUS LTE LT LOR LAND IN IDENT GTE GT EQ EOF DOT CONCEPT AMP ACTION_START ACTIONS ]
## Transitions:
-- On STR_LIT shift to state 25
-- On NOT shift to state 26
-- On MINUS shift to state 27
-- On INT_LIT shift to state 28
-- On IDENT shift to state 29
-- On BOOL_LIT shift to state 30
-- On lval shift to state 31
-- On expr shift to state 44
## Reductions:
